- fix display on narrow window (buttons and input would appear on different lines)  - refactor spinner as a mixin, with single template for <input> and buttons (this eliminates a lot of the dom manipulation code, including the getAbsolutePosition() calls)  - reduce code size (removed about 85 lines)
TODO:
 - all the keyboard handling code needs to be factored at of here into a separate class (shared by Spinner, Slider, etc.)
 - is there a way to use a inline-block div rather than a table?
 - when browser type class is added to document root, don't need to add it in validate.js

git-svn-id: http://svn.dojotoolkit.org/src@5120 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlSpinner.css
+++ b/trunk/src/widget/templates/HtmlSpinner.css
@@ -1,39 +1,34 @@
-input.dojoSpinnerInput {
-	/* font-size: 0.8em; */
-	border: 0px;
+/* inline the table holding the <input> and buttons (method varies by browser) */
+.ie .dojoSpinner, .safari .dojoSpinner {
+	display: inline;
 }
 
-.dojoSpinnerOptions {
-	font-family: Verdana, Helvetica, Garamond, sans-serif;
-	/* font-size: 0.7em; */
-	background-color: white;
-	border: 1px solid #afafaf;
-	position: absolute;
-	z-index: 1000; 
-	overflow: auto;
-	-moz-opacity: 0;
-	cursor: default;
+.moz .dojoSpinner {
+	display: -moz-inline-box;
 }
 
+.opera .dojoSpinner {
+	display: inline-table;
+}
+
+/* generic stuff for the table */
+.dojoSpinner td {
+	padding:0px;
+	margin:0px;
+	vertical-align: middle;
+}
 table.dojoSpinner {
-	border: 1px solid #afafaf;
-}
-
-.dojoSpinnerItem {
-	padding-left: 2px;
-	padding-top: 2px;
+	border:0px;
+	border-spacing:0px;
+	line-height:0px;
+	padding:0px;
 	margin: 0px;
+	vertical-align: middle;
 }
 
-.dojoSpinnerItemEven {
-	background-color: #f4f4f4;
-}
-
-.dojoSpinnerItemOdd {
-	background-color: white;
-}
-
-.dojoSpinnerItemHighlight {
-	background-color: #63709A;
-	color: white;
+/* the buttons */
+.dojoSpinner img {
+	display: block;
+	border-width:0px 1px 1px 0px;
+	border-style:outset;
 }
